Export messages so we know it actually did something.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -77,6 +77,8 @@ GoogleEarth=Google Earth
 GoogleEarth_Description=Any data containing geo references can be displayed inside Google Earth.  This exporter allows you to visualize the locations from which a collection was obtained.  This can easily show the global reach of a collection's holdings.  <a href="http://earth.google.com/">Get Google Earth!</a>
 DiGIR=DiGIR
 DiGIR_Description=Collection object data can be exported to the DiGIR schema format for transfer through a DiGIR portal.  For more information on DiGIR, visit <a href="http://digir.sourceforge.net/">http://digir.sourceforge.net/</a>.
+EXPORTING_TO=Exporting to %s ...
+EXPORTING_DONE=Done exporting to %s
 
 #################################
 # Generic Errors
