--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -532,7 +532,8 @@ WorkbenchDataItem=OnRamp Data Item
 WorkbenchTemplate=OnRamp Template
 WorkbenchTemplateMappingItem=OnRamp Template Mapping Item
 WB_FILE_FORMAT=File Format?
-WB_EDIT_PROPS=Edit Workbench Properties
+WB_EDIT_PROPS=Edit Properties
+WB_EDIT_PROPS_MNEU=E
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
