--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -747,3 +747,14 @@ SEMICOLON=Semicolon
 Finish=Finish
 DATA_PREVIEW=Data Preview
 TEXT_QUAL=Text qualifier
+CHAR_SET=Character set
+COLUMN_HEAD=First row contain column headers
+ESCAPE_MODE=Escape mode
+DEFAULT=default
+NONE=none
+BACKSLASH=backslash
+DOUBLED=doubled
+IMPORT_CVS=Import from CSV
+FILE_PREVIEW= Preview of file
+FILE_IMPORT=Import File
+DATA_IMPORT_OPS=Data import options
