--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -17,6 +17,7 @@ Back=Back
 Wrap=Wrap
 WrapSearch=Wrap Search
 OK=OK
+Apply=Apply
 Close=Close
 Help=Help
 SelectAll=Select All
@@ -29,7 +30,7 @@ Login=Login
 SelectAll=Select All
 DeselectAll=Deselect All
 Accept=Accept
-
+Continue=Continue
 
 #################################
 # Toolbar /  Tasks
@@ -200,6 +201,13 @@ ViewMneu=V
 CloseMneu=C
 ReducedSizeMneu=R
 OrigMneu=O
+
+Image=Image
+ImageMneu=I
+Clear=Clear
+ClearMneu=C
+Replace=Replace
+ReplaceMneu=R
 
 # Other
 TaxonTree=Taxon Tree
@@ -509,11 +517,12 @@ WB_CHOOSE_TEMPLATE_REUSE= Choose a template to reuse
 WB_COL_MAPPER=Column Mapper
 WB_CARRYFORWARD=Carry Forward
 WB_CHOOSE_CARRYFORWARD=Choose Fields to Carry Forward:
-WB_SHOW_CARD=Toggle card image window
+WB_SHOW_IMAGES=Show Images
+WB_HIDE_IMAGES=Hide Images
 WB_SHOW_MAP=Show map of selected rows
 WB_GEO_REF_DATA_MAP=Geo Refs Data Map
 WB_SHOW_IN_GOOGLE_EARTH=Show in Google Earth
-WB_IMPORT_CARDS=Import Card Images
+WB_IMPORT_CARDS=Import Images
 WB_REUSE=Reuse
 WB_CHOOSE_IMAGES=Choose Images
 WB_CREATE_NEW_TEMPLATE=Create New Template
@@ -523,7 +532,7 @@ WB_ORIG_SIZE=Original Size
 WB_DO_BIOGEOMANCER_LOOKUP=Georeference using BioGeomancer
 WB_EXPORT_DATA=Export Data
 WB_EXPORT_TEMPLATE=Export Template
-WB_EDIT_CONTROL=Configure Edit Control
+WB_EDIT_CONTROL=Form Control Properties
 WB_SELECT_ACTION_TITLE=Select an Action
 WB_EDIT_MAPPINGS=Edit Column Mappings
 WB_EDIT_TEMPLATE_INFO=Edit Template Information
@@ -534,6 +543,13 @@ WorkbenchTemplateMappingItem=OnRamp Template Mapping Item
 WB_FILE_FORMAT=File Format?
 WB_EDIT_PROPS=Edit Properties
 WB_EDIT_PROPS_MNEU=E
+WB_NO_IMAGE_ROW=No image available for the selected row
+WB_LOAD_NEW_IMAGE=Load New Image
+WB_ERROR_LOAD_IMAGE=Error Loading Image
+WB_ERROR_IMAGE_TOOLARGE=The image was too large (16 Megabyte limit).
+WB_ERROR_IMAGE_MEMORY=Specify ran out of memory trying to load the image.
+WB_ERROR_IMAGE_GENERIC=Error Loading Image (No reason given.)
+WB_STOP_LOADING=Stop Loading Images
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
