--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -125,6 +125,7 @@ DeletedItems=Deleted Items
 
 # Record Controller
 Item=Item
+Record=Record
 GotoFirstRecordTT=Go to First %s
 GotoPreviousRecordTT=Go to Previous %s
 GotoNextRecordTT=Go to Next %s
