--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -551,6 +551,7 @@ WB_ERROR_IMAGE_TOOLARGE=The image was too large (16 Megabyte limit).
 WB_ERROR_IMAGE_MEMORY=Specify ran out of memory trying to load the image.
 WB_ERROR_IMAGE_GENERIC=Error Loading Image (No reason given.)
 WB_STOP_LOADING=Stop Loading Images
+WB_CONVERT_GEO_FORMAT=Convert Geo Ref Formats
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
@@ -776,7 +777,14 @@ FILE_PREVIEW= Preview of file
 FILE_IMPORT=Import File
 DATA_IMPORT_OPS=Data import options
 
+# geo reference related items
 N=N
 S=S
 E=E
 W=W
+DDDDDD=DDDDDD
+DDMMMM=DDMMMM
+DDMMSS=DDMMSS
+GeoRefConv=Geo Reference Format Converter
+GeoRefConvDesc=Converts various geo reference formats to one of a set of standardized formats
+NoGeoRefColumns=DataSet does not contain geo reference columns
