--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -782,9 +782,9 @@ N=N
 S=S
 E=E
 W=W
-DDDDDD=DDDDDD
-DDMMMM=DDMMMM
-DDMMSS=DDMMSS
+DDDDDD=DD.DDDD (32.7619)
+DDMMMM=DD MM.MM (32 45.714)
+DDMMSS=DD MM SS.SS (32 45 42.84)
 GeoRefConv=Geo Reference Format Converter
 GeoRefConvDesc=Converts various geo reference formats to one of a set of standardized formats
 NoGeoRefColumns=DataSet does not contain geo reference columns
