--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -785,6 +785,6 @@ W=W
 DDDDDD=DD.DDDD (32.7619)
 DDMMMM=DD MM.MM (32 45.714)
 DDMMSS=DD MM SS.SS (32 45 42.84)
-GeoRefConv=Geo Reference Format Converter
-GeoRefConvDesc=Converts various geo reference formats to one of a set of standardized formats
-NoGeoRefColumns=DataSet does not contain geo reference columns
+GeoRefConv=Georeference Format Converter
+GeoRefConvDesc=Converts various georeference formats to one of a set of standardized formats
+NoGeoRefColumns=DataSet does not contain georeference columns
