--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -493,8 +493,8 @@ WB_IMPORTDATA=Import Data
 Label_Entry=From Labels
 CHOOSE_WORKBENCH_IMPORT_FILE=Select an OnRamp Data Import File
 CHOOSE_WORKBENCH_EXPORT_FILE=Enter Export File Name
-WB_TEMPLATE_INFO=DataSet Template Information
-WB_DATASET_INFO=DataSet Information
+WB_TEMPLATE_INFO=Template Properties
+WB_DATASET_INFO=DataSet Properties
 WB_NO_MAPPING=No Mapping
 WB_MAPPING_COLUMNS=Mappings
 WB_DATAOBJECTS=Data Objects
@@ -552,6 +552,7 @@ WB_ERROR_IMAGE_MEMORY=Specify ran out of memory trying to load the image.
 WB_ERROR_IMAGE_GENERIC=Error Loading Image (No reason given.)
 WB_STOP_LOADING=Stop Loading Images
 WB_CONVERT_GEO_FORMAT=Convert Geo Ref Formats
+WB_PARSE_FILE_ERROR=The file `%s` could be properly read in, it is most likely the wrong format.
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
