--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -767,7 +767,7 @@ Finish=Finish
 DATA_PREVIEW=Data Preview
 TEXT_QUAL=Text qualifier
 CHAR_SET=Character set
-COLUMN_HEAD=First row contain column headers
+COLUMN_HEAD=First row contains column headers
 ESCAPE_MODE=Escape mode
 DEFAULT=default
 NONE=none
