i18n cleanup added some setters to ConfigureCSV getting near completion on the dataimportdialog.  created csv import, created xsl import (completely untested). current code checkin, does NOT link up data import to workbench UI.  still uses old dialogs. most of the work in thisc commit with with the data table preview.
known import dialog issues:
need to implement cancel of operation
 - need to clean up and document code
 - need to discuss how to handle “bad” import decisions
 - primarily we need to address mismatch of column header count to data columns count (jtable requires that that all rows must be of the same length as columnNames)  I see the following options
   - pad column headers with dummy headers for any data columns that falls outside of the defined columnNames
   - truncate all table data that falls outside of the columnName definitions
   - “catch” the error before it happens and force the user to make sure that data column count and header count match.
   - I think the first option makes the most sense from the user’s perspective, this is how excel behaves
 - pimilarly if parsing decisions end up making data column count less that headers, do we pad empty data cells with empty strings?
 - Need to handle jdbc errors: ran into the instance where user selects a delimiter that concats all of the header defs into one string and attempts to make this the column name.  throws jdbc error that column name

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -767,7 +767,7 @@ Finish=Finish
 DATA_PREVIEW=Data Preview
 TEXT_QUAL=Text qualifier
 CHAR_SET=Character set
-COLUMN_HEAD=First row contain column headers
+COLUMN_HEAD=First row contains column headers
 ESCAPE_MODE=Escape mode
 DEFAULT=default
 NONE=none
