--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -37,6 +37,7 @@ Continue=Continue
 #################################
 Startup=Welcome
 Workbench=OnRamp
+OnRamp=OnRamp
 workbench_hint=Create and edit an OnRamp DataSet
 Data_Entry=Data Entry
 dataentry_hint=Enter and update your collections
@@ -497,6 +498,8 @@ WB_TEMPLATE_INFO=Template Properties
 WB_DATASET_INFO=DataSet Properties
 WB_NO_MAPPING=No Mapping
 WB_MAPPING_COLUMNS=Mappings
+WB_COLUMNS=Columns
+WB_SCHEMA=Schema
 WB_DATAOBJECTS=Data Objects
 WB_DATAOBJ_FIELDS=Fields
 WBT_DEL_TITLE=Delete OnRamp Template
@@ -515,7 +518,8 @@ WB_ADD_MAPPING_ITEM=Add New Grid Column
 WB_REMOVE_MAPPING_ITEM=Remove New Grid Column
 WB_CHOOSE_TEMPLATE_TITLE= Choose A Template
 WB_CHOOSE_TEMPLATE_REUSE= Choose a template to reuse
-WB_COL_MAPPER=Column Mapper
+WB_TEMPLATE_EDITOR=Template Editor
+WB_IMP_TEMPLATE_EDITOR=Import Template Editor
 WB_CARRYFORWARD=Carry Forward
 WB_CHOOSE_CARRYFORWARD=Choose Fields to Carry Forward:
 WB_SHOW_IMAGES=Show Images
@@ -526,7 +530,6 @@ WB_SHOW_IN_GOOGLE_EARTH=Show in Google Earth
 WB_IMPORT_CARDS=Import Images
 WB_REUSE=Reuse
 WB_CHOOSE_IMAGES=Choose Images
-WB_CREATE_NEW_TEMPLATE=Create New Template
 WB_CREATINGMAP=Creating Map...
 WB_REDUCED_SIZE=Reduced Size
 WB_ORIG_SIZE=Original Size
@@ -553,6 +556,8 @@ WB_ERROR_IMAGE_GENERIC=Error Loading Image (No reason given.)
 WB_STOP_LOADING=Stop Loading Images
 WB_CONVERT_GEO_FORMAT=Convert Geo Ref Formats
 WB_PARSE_FILE_ERROR=The file `%s` could be properly read in, it is most likely the wrong format.
+WB_IMAGE_WINDOW=Image Window
+WB_INITIAL_HTML=help/SpecifyHelp/OnRamp/Overview.html
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
