fixes for exporting

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -558,6 +558,7 @@ WB_CONVERT_GEO_FORMAT=Convert Geo Ref Formats
 WB_PARSE_FILE_ERROR=The file `%s` could be properly read in, it is most likely the wrong format.
 WB_IMAGE_WINDOW=Image Window
 WB_INITIAL_HTML=help/SpecifyHelp/OnRamp/Overview.html
+WB_EXPORT_NOFILENAME=No file name was entered.
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
