--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -559,6 +559,7 @@ WB_PARSE_FILE_ERROR=The file `%s` could be properly read in, it is most likely t
 WB_IMAGE_WINDOW=Image Window
 WB_INITIAL_HTML=help/SpecifyHelp/OnRamp/Overview.html
 WB_EXPORT_NOFILENAME=No file name was entered.
+WB_NEWDATA_TOO_LONG=The data in the field '%s' exceeds %d characters.
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
