--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -560,6 +560,8 @@ WB_IMAGE_WINDOW=Image Window
 WB_INITIAL_HTML=help/SpecifyHelp/OnRamp/Overview.html
 WB_EXPORT_NOFILENAME=No file name was entered.
 WB_NEWDATA_TOO_LONG=The data in the field '%s' exceeds %d characters.
+WB_TEXTFIELD=Text Field
+WB_TEXTAREA=Text Area
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
