added field length variable to workbenchTemplateMappingItem aded textQualifier stuff to ConfigCSV added data validation to ImportDialog fixed some bugs in ImportDialog hooked up import dialog to app added i18n
Known issues: 
cancel button not canceling yet.
need to implement rollover comman on data validation message
need to test and compare preview table with workbench table

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -555,7 +555,7 @@ WB_ERROR_IMAGE_MEMORY=Specify ran out of memory trying to load the image.
 WB_ERROR_IMAGE_GENERIC=Error Loading Image (No reason given.)
 WB_STOP_LOADING=Stop Loading Images
 WB_CONVERT_GEO_FORMAT=Convert Geo Ref Formats
-WB_PARSE_FILE_ERROR=The file `%s` could be properly read in, it is most likely the wrong format.
+WB_PARSE_FILE_ERROR=The file `%s` could not be properly read in, it is most likely the wrong format.
 WB_IMAGE_WINDOW=Image Window
 WB_INITIAL_HTML=help/SpecifyHelp/OnRamp/Overview.html
 WB_EXPORT_NOFILENAME=No file name was entered.
@@ -786,6 +786,9 @@ IMPORT_CVS=Import from CSV
 FILE_PREVIEW= Preview of file
 FILE_IMPORT=Import File
 DATA_IMPORT_OPS=Data import options
+DEFAULT_COLUMN_NAME=Column
+DATA_IMPORT_ERROR=There are problems with the data you are wanting to import.  Details...
+DATA_IMPORT_ISSUES=Data Import Problems
 
 # geo reference related items
 N=N
