--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -562,6 +562,7 @@ WB_EXPORT_NOFILENAME=No file name was entered.
 WB_NEWDATA_TOO_LONG=The data in the field '%s' exceeds %d characters.
 WB_TEXTFIELD=Text Field
 WB_TEXTAREA=Text Area
+LOADING_MAP=Loading Map...
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
