added save progress dialog.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -563,6 +563,8 @@ WB_NEWDATA_TOO_LONG=The data in the field '%s' exceeds %d characters.
 WB_TEXTFIELD=Text Field
 WB_TEXTAREA=Text Area
 LOADING_MAP=Loading Map...
+WB_ERROR_SAVING=Error saving the DataSet.
+WB_SAVED='%s' was saved.
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
