--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -565,6 +565,8 @@ WB_TEXTAREA=Text Area
 LOADING_MAP=Loading Map...
 WB_ERROR_SAVING=Error saving the DataSet.
 WB_SAVED='%s' was saved.
+WB_EDIT_DLG_TITLE=%s Properties
+WB_SAVE_DATASET_TT=Save '%s' DataSet
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
