Test 4:     Result 2 - the "OnRamp" starter pane appears magically after cancelling the "Do you want to save?" dialog (FIXED)     Result 7 - the unsaved changes WERE NOT saved (FIXED)
Test 5:
    Result 2 - the progress bar is not centered over the window I do not see this behavior, mine is centered
    Result 4 - the changes WERE NOT saved (FIXED)

Test 8:
    Result 1 - the properties button is only enabled if the user clicks
on a label, not a data entry field(FIXED) 
    Result 2 - the "Save" button doesn't provide a tooltip(FIXED) 
    Result 6 - the carry forward dialog doesn't go away when the "X" is
clicked (perhaps setDefaultCloseBehavior needs to be called) (FIXED)

PLus, fixed Checkboxes and null values

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -565,6 +565,8 @@ WB_TEXTAREA=Text Area
 LOADING_MAP=Loading Map...
 WB_ERROR_SAVING=Error saving the DataSet.
 WB_SAVED='%s' was saved.
+WB_EDIT_DLG_TITLE=%s Properties
+WB_SAVE_DATASET_TT=Save '%s' DataSet
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
