fixes for adding and removing rows viewing form with no records fix for windows cell editing fix for windows col mapper selection colors fixed adding and removing rows fixed about dialog

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -3,6 +3,7 @@
 #################################
 File=File
 About=About
+AboutMneu=A
 Edit=Edit
 Save=Save
 Cancel=Cancel
@@ -496,7 +497,7 @@ CHOOSE_WORKBENCH_IMPORT_FILE=Select an OnRamp Data Import File
 CHOOSE_WORKBENCH_EXPORT_FILE=Enter Export File Name
 WB_TEMPLATE_INFO=Template Properties
 WB_DATASET_INFO=DataSet Properties
-WB_NO_MAPPING=No Mapping
+WB_NO_MAPPING=Not Imported
 WB_MAPPING_COLUMNS=Mappings
 WB_COLUMNS=Columns
 WB_SCHEMA=Schema
