hooked up import dialog to XLS import process. fixed some i18n in configxls code

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -789,6 +789,7 @@ NONE=none
 BACKSLASH=backslash
 DOUBLED=doubled
 IMPORT_CVS=Import from CSV
+IMPORT_XLS=Import from XLS
 FILE_PREVIEW= Preview of file
 FILE_IMPORT=Import File
 DATA_IMPORT_OPS=Data import options
