misc bugs fixes rewrite of ColumnMpper, it is now the TemplateEditor Added better Load, Save, Delete display Added helper for getting the Statusbar

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -499,7 +499,8 @@ WB_TEMPLATE_INFO=Template Properties
 WB_DATASET_INFO=DataSet Properties
 WB_NO_MAPPING=Not Imported
 WB_MAPPING_COLUMNS=Mappings
-WB_COLUMNS=Columns
+WB_COLUMNS=Imported Columns
+WB_REMOVE_COLUMNS=Columns To Be Removed
 WB_SCHEMA=Schema
 WB_DATAOBJECTS=Data Objects
 WB_DATAOBJ_FIELDS=Fields
@@ -566,8 +567,18 @@ WB_TEXTAREA=Text Area
 LOADING_MAP=Loading Map...
 WB_ERROR_SAVING=Error saving the DataSet.
 WB_SAVED='%s' was saved.
+WB_SAVING=Saving %s...
 WB_EDIT_DLG_TITLE=%s Properties
 WB_SAVE_DATASET_TT=Save '%s' DataSet
+WB_DELETING_TEMPLATE=Deleting %s...
+WB_DELETED_TEMPLATE=Deleted %s
+WB_DELETING_DATASET=Deleting %s...
+WB_DELETED_DATASET=Deleted %s
+WB_LOADING_DATASET=Loading %s...
+WB_MOVE_UP=Move item up in the list
+WB_MOVE_DOWN=Move item down in the list
+WB_TEMPLATE_EXISTS=Template Name `%s` exists.
+WB_DATASET_EXISTS=DataSet Name `%s` exists.
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
