--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -499,7 +499,10 @@ WB_TEMPLATE_INFO=Template Properties
 WB_DATASET_INFO=DataSet Properties
 WB_NO_MAPPING=Not Imported
 WB_MAPPING_COLUMNS=Mappings
-WB_COLUMNS=Imported Columns
+WB_COLUMNS=Spreadsheet Columns
+WB_IMPORTED_COLUMNS=Unmapped Imported Columns
+WB_MAP_BTN=Map
+WB_UNMAP_BTN=Unmap
 WB_REMOVE_COLUMNS=Columns To Be Removed
 WB_SCHEMA=Schema
 WB_DATAOBJECTS=Data Objects
@@ -516,8 +519,8 @@ WB_SELECT_FIELD_TITLE=Select a Field
 WB_SELECT_FIELD=Choose which field to report on:
 WB_CHART_TITLE=%s Counts
 WB_TOP10=Top 10
-WB_ADD_MAPPING_ITEM=Add New Grid Column
-WB_REMOVE_MAPPING_ITEM=Remove New Grid Column
+WB_ADD_MAPPING_ITEM=Add New Column
+WB_REMOVE_MAPPING_ITEM=Remove New Column
 WB_CHOOSE_TEMPLATE_TITLE= Choose A Template
 WB_CHOOSE_TEMPLATE_REUSE= Choose a template to reuse
 WB_TEMPLATE_EDITOR=Template Editor
