--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -37,8 +37,7 @@ Continue=Continue
 # Toolbar /  Tasks
 #################################
 Startup=Welcome
-Workbench=OnRamp
-OnRamp=OnRamp
+Workbench=Workbench
 workbench_hint=Create and edit an OnRamp DataSet
 Data_Entry=Data Entry
 dataentry_hint=Enter and update your collections
@@ -490,21 +489,22 @@ Templates=Templates
 WB_DATASETS=DataSets
 WB_DATASET=DataSet
 WB_NEW_DATASET=New DataSet
-WB_NEW_TEMPLATE=New Template
 WB_IMPORTDATA=Import Data
 Label_Entry=From Labels
+WB_REUSE_MAPPING=Resuse DataSet Mapping
 CHOOSE_WORKBENCH_IMPORT_FILE=Select an OnRamp Data Import File
 CHOOSE_WORKBENCH_EXPORT_FILE=Enter Export File Name
 WB_TEMPLATE_INFO=Template Properties
 WB_DATASET_INFO=DataSet Properties
 WB_NO_MAPPING=Not Imported
 WB_MAPPING_COLUMNS=Mappings
-WB_COLUMNS=Spreadsheet Columns
+WB_COLUMNS=DataSet Columns
 WB_IMPORTED_COLUMNS=Unmapped Imported Columns
 WB_MAP_BTN=Map
 WB_UNMAP_BTN=Unmap
 WB_REMOVE_COLUMNS=Columns To Be Removed
 WB_SCHEMA=Schema
+WB_DATASET_COLUMNS=DataSet Columns
 WB_DATAOBJECTS=Data Objects
 WB_DATAOBJ_FIELDS=Fields
 WBT_DEL_TITLE=Delete OnRamp Template
@@ -521,10 +521,10 @@ WB_CHART_TITLE=%s Counts
 WB_TOP10=Top 10
 WB_ADD_MAPPING_ITEM=Add New Column
 WB_REMOVE_MAPPING_ITEM=Remove New Column
-WB_CHOOSE_TEMPLATE_TITLE= Choose A Template
-WB_CHOOSE_TEMPLATE_REUSE= Choose a template to reuse
-WB_TEMPLATE_EDITOR=Template Editor
-WB_IMP_TEMPLATE_EDITOR=Import Template Editor
+WB_CHOOSE_TEMPLATE_TITLE= Choose A DataSet
+WB_CHOOSE_TEMPLATE_REUSE= Choose a DataSet to reuse
+WB_TEMPLATE_EDITOR=DataSet Mapper Editor
+WB_IMP_TEMPLATE_EDITOR=Import DataSet Mapper
 WB_CARRYFORWARD=Carry Forward
 WB_CHOOSE_CARRYFORWARD=Choose Fields to Carry Forward:
 WB_SHOW_IMAGES=Show Images
@@ -539,12 +539,14 @@ WB_CREATINGMAP=Creating Map...
 WB_REDUCED_SIZE=Reduced Size
 WB_ORIG_SIZE=Original Size
 WB_DO_BIOGEOMANCER_LOOKUP=Georeference using BioGeomancer
-WB_EXPORT_DATA=Export Data
-WB_EXPORT_TEMPLATE=Export Template
+WB_EXPORT_DATA=Export DataSet
+WB_EXPORT_TEMPLATE=Export Excel Template
 WB_EDIT_CONTROL=Form Control Properties
 WB_SELECT_ACTION_TITLE=Select an Action
 WB_EDIT_MAPPINGS=Edit Column Mappings
 WB_EDIT_TEMPLATE_INFO=Edit Template Information
+WB_EDIT_DATASET_MAPPING=Edit DataSet Mapping
+WB_EDIT_DATASET_MAPPING_MNEU=D
 WB_CREATE_EMPTY_DATASET=Create Empty Spreadsheet from the '%s' Template
 WorkbenchDataItem=OnRamp Data Item
 WorkbenchTemplate=OnRamp Template
@@ -582,6 +584,15 @@ WB_MOVE_UP=Move item up in the list
 WB_MOVE_DOWN=Move item down in the list
 WB_TEMPLATE_EXISTS=Template Name `%s` exists.
 WB_DATASET_EXISTS=DataSet Name `%s` exists.
+
+# ToolTips
+WB_CLICK_EDIT_DATA_TT=Click to edit the DataSet
+WB_IMPORTDATA_TT=Import data from a Excel or CSV file
+WB_IMPORTCARDS_TT=Create new DataSet from a one or more images
+WB_REUSE_MAPPING_TT=Create new DataSet resuing a mapping from an existing DataSet
+WB_NEW_DATASET_TT=Create a new DataSet with a new mapping
+WB_EXPORT_DATA_TT=Export the DataSet to an MS-Excel file
+WB_EXPORT_TEMPLATE_TT=Create an empty MS-Excel file by exporting the DatSet's Columns definitions 
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
