--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -584,6 +584,11 @@ WB_MOVE_UP=Move item up in the list
 WB_MOVE_DOWN=Move item down in the list
 WB_TEMPLATE_EXISTS=Template Name `%s` exists.
 WB_DATASET_EXISTS=DataSet Name `%s` exists.
+WB_MODIFIED_IMPORT_DATA=Import Status Report
+WB_ROW=Row
+WB_COLUMN=Column
+WB_TRUNCATED=Excluded Data
+WB_TRUNCATIONS=The following values were truncated during import:
 
 # ToolTips
 WB_CLICK_EDIT_DATA_TT=Click to edit the DataSet
