--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -14,6 +14,7 @@ Search=Search
 FindNext=Find Next
 Browse=Browse...
 Next=Next
+Skip=Skip
 Back=Back
 Wrap=Wrap
 WrapSearch=Wrap Search
@@ -838,3 +839,26 @@ DDMMSS=DD MM SS.SS (32 45 42.84)
 GeoRefConv=Georeference Format Converter
 GeoRefConvDesc=Converts various georeference formats to one of a set of standardized formats
 NoGeoRefColumns=DataSet does not contain georeference columns
+ID=ID
+Country=Country
+Adm1=Adm 1
+Adm2=Adm 2
+Locality=Locality
+CountryBoundingBox=Country Bounding Box
+MatchedCount=Matched Count
+BoundingBox=Bounding Box
+BoundingBox Centroid=Bounding Box Centroid
+CentroidErrorRadius=Centroid Error Radius
+CentroidErrorRadiusUnits=Centroid Error Radius Units
+MultiPointMatch=Multi Point Match
+WeightedCentroid=Weighted Centroid
+Id=Id
+FeatureName=Feat. Name
+FeatureType=Feat. Type
+Gazetteer=Gazetteer
+Coordinates=Coordinates
+Offset=Offset
+BoundingBox=Bounding Box
+
+# misc
+of=of
