--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -492,7 +492,7 @@ WB_DATASET=DataSet
 WB_NEW_DATASET=New DataSet
 WB_IMPORTDATA=Import Data
 Label_Entry=From Labels
-WB_REUSE_MAPPING=Resuse DataSet Mapping
+WB_REUSE_MAPPING=Reuse DataSet Mapping
 CHOOSE_WORKBENCH_IMPORT_FILE=Select an OnRamp Data Import File
 CHOOSE_WORKBENCH_EXPORT_FILE=Enter Export File Name
 WB_TEMPLATE_INFO=Template Properties
@@ -508,6 +508,7 @@ WB_SCHEMA=Schema
 WB_DATASET_COLUMNS=DataSet Columns
 WB_DATAOBJECTS=Data Objects
 WB_DATAOBJ_FIELDS=Fields
+WB_NEW_DATASET_MAPPINGS=New Mapping
 WBT_DEL_TITLE=Delete OnRamp Template
 WBT_DEL_MSG=This will delete %d workbench file(s) that use this template. Proceed with the delete?
 WBT_DELBTN=Proceed
@@ -523,7 +524,7 @@ WB_TOP10=Top 10
 WB_ADD_MAPPING_ITEM=Add New Column
 WB_REMOVE_MAPPING_ITEM=Remove New Column
 WB_CHOOSE_TEMPLATE_TITLE= Choose A DataSet
-WB_CHOOSE_TEMPLATE_REUSE= Choose a DataSet to reuse
+WB_CHOOSE_TEMPLATE_REUSE= Choose a DataSet to reuse the Column Mappings
 WB_TEMPLATE_EDITOR=DataSet Mapper Editor
 WB_IMP_TEMPLATE_EDITOR=Import DataSet Mapper
 WB_CARRYFORWARD=Carry Forward
