Fixed a typo in the strings file.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -848,7 +848,7 @@ Locality=Locality
 CountryBoundingBox=Country Bounding Box
 MatchedCount=Matched Count
 BoundingBox=Bounding Box
-BoundingBox Centroid=Bounding Box Centroid
+BoundingBoxCentroid=Bounding Box Centroid
 CentroidErrorRadius=Centroid Error Radius
 CentroidErrorRadiusUnits=Centroid Error Radius Units
 MultiPointMatch=Multi Point Match
