--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -495,7 +495,6 @@ Label_Entry=From Labels
 WB_REUSE_MAPPING=Reuse DataSet Mapping
 CHOOSE_WORKBENCH_IMPORT_FILE=Select an OnRamp Data Import File
 CHOOSE_WORKBENCH_EXPORT_FILE=Enter Export File Name
-WB_TEMPLATE_INFO=Template Properties
 WB_DATASET_INFO=DataSet Properties
 WB_NO_MAPPING=Not Imported
 WB_MAPPING_COLUMNS=Mappings
@@ -509,8 +508,6 @@ WB_DATASET_COLUMNS=DataSet Columns
 WB_DATAOBJECTS=Data Objects
 WB_DATAOBJ_FIELDS=Fields
 WB_NEW_DATASET_MAPPINGS=New Mapping
-WBT_DEL_TITLE=Delete OnRamp Template
-WBT_DEL_MSG=This will delete %d workbench file(s) that use this template. Proceed with the delete?
 WBT_DELBTN=Proceed
 WB_ADD_ROW=Add a row
 WB_INSERT_ROW=Insert a row
@@ -523,10 +520,10 @@ WB_CHART_TITLE=%s Counts
 WB_TOP10=Top 10
 WB_ADD_MAPPING_ITEM=Add New Column
 WB_REMOVE_MAPPING_ITEM=Remove New Column
-WB_CHOOSE_TEMPLATE_TITLE= Choose A DataSet
-WB_CHOOSE_TEMPLATE_REUSE= Choose a DataSet to reuse the Column Mappings
-WB_TEMPLATE_EDITOR=DataSet Mapper Editor
-WB_IMP_TEMPLATE_EDITOR=Import DataSet Mapper
+WB_CHOOSE_DATASET_REUSE= Choose a DataSet to reuse the Column Mappings
+WB_CHOOSE_DATASET_REUSE_TITLE=Reuse DataSet Mapping
+WB_MAPPING_EDITOR=DataSet Mapper Editor
+WB_IMP_MAPPING_EDITOR=Import DataSet Mapper
 WB_CARRYFORWARD=Carry Forward
 WB_CHOOSE_CARRYFORWARD=Choose Fields to Carry Forward:
 WB_SHOW_IMAGES=Show Images
@@ -546,7 +543,6 @@ WB_EXPORT_TEMPLATE=Export Excel Template
 WB_EDIT_CONTROL=Form Control Properties
 WB_SELECT_ACTION_TITLE=Select an Action
 WB_EDIT_MAPPINGS=Edit Column Mappings
-WB_EDIT_TEMPLATE_INFO=Edit Template Information
 WB_EDIT_DATASET_MAPPING=Edit DataSet Mapping
 WB_EDIT_DATASET_MAPPING_MNEU=D
 WB_CREATE_EMPTY_DATASET=Create Empty Spreadsheet from the '%s' Template
@@ -577,14 +573,12 @@ WB_SAVED='%s' was saved.
 WB_SAVING=Saving %s...
 WB_EDIT_DLG_TITLE=%s Properties
 WB_SAVE_DATASET_TT=Save '%s' DataSet
-WB_DELETING_TEMPLATE=Deleting %s...
-WB_DELETED_TEMPLATE=Deleted %s
 WB_DELETING_DATASET=Deleting %s...
 WB_DELETED_DATASET=Deleted %s
 WB_LOADING_DATASET=Loading %s...
+WB_SAVED_MAPPINGS=Saved Mapping Information.
 WB_MOVE_UP=Move item up in the list
 WB_MOVE_DOWN=Move item down in the list
-WB_TEMPLATE_EXISTS=Template Name `%s` exists.
 WB_DATASET_EXISTS=DataSet Name `%s` exists.
 WB_MODIFIED_IMPORT_DATA=Import Status Report
 WB_ROW=Row
