More fixes Template Editor title changes fixed unwanted sorting of NavBox items packaging changes

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -520,10 +520,14 @@ WB_CHART_TITLE=%s Counts
 WB_TOP10=Top 10
 WB_ADD_MAPPING_ITEM=Add New Column
 WB_REMOVE_MAPPING_ITEM=Remove New Column
-WB_CHOOSE_DATASET_REUSE= Choose a DataSet to reuse the Column Mappings
+
+WB_CHOOSE_DATASET_REUSE= Choose a DataSet to reuse the mappings
 WB_CHOOSE_DATASET_REUSE_TITLE=Reuse DataSet Mapping
-WB_MAPPING_EDITOR=DataSet Mapper Editor
-WB_IMP_MAPPING_EDITOR=Import DataSet Mapper
+
+WB_MAPPING_EDITOR=DataSet Mapping Editor
+WB_IMPORT_MAPPING_EDITOR=Import DataSet Mapper
+WB_NEW_DATASET_MAPPER=New DataSet Mapper
+
 WB_CARRYFORWARD=Carry Forward
 WB_CHOOSE_CARRYFORWARD=Choose Fields to Carry Forward:
 WB_SHOW_IMAGES=Show Images
