Removal of some OnRamp references and added focus border to icon buttons

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -39,7 +39,7 @@ Continue=Continue
 #################################
 Startup=Welcome
 Workbench=Workbench
-workbench_hint=Create and edit an OnRamp DataSet
+workbench_hint=Create and edit an Workbench DataSet
 Data_Entry=Data Entry
 dataentry_hint=Enter and update your collections
 Taxon_Tree=Taxonomy Tree
@@ -493,7 +493,7 @@ WB_NEW_DATASET=New DataSet
 WB_IMPORTDATA=Import Data
 Label_Entry=From Labels
 WB_REUSE_MAPPING=Reuse DataSet Mapping
-CHOOSE_WORKBENCH_IMPORT_FILE=Select an OnRamp Data Import File
+CHOOSE_WORKBENCH_IMPORT_FILE=Select a File to Import
 CHOOSE_WORKBENCH_EXPORT_FILE=Enter Export File Name
 WB_DATASET_INFO=DataSet Properties
 WB_NO_MAPPING=Not Imported
@@ -550,9 +550,9 @@ WB_EDIT_MAPPINGS=Edit Column Mappings
 WB_EDIT_DATASET_MAPPING=Edit DataSet Mapping
 WB_EDIT_DATASET_MAPPING_MNEU=D
 WB_CREATE_EMPTY_DATASET=Create Empty Spreadsheet from the '%s' Template
-WorkbenchDataItem=OnRamp Data Item
-WorkbenchTemplate=OnRamp Template
-WorkbenchTemplateMappingItem=OnRamp Template Mapping Item
+WorkbenchDataItem=Workbench Data Item
+WorkbenchTemplate=Workbench Template
+WorkbenchTemplateMappingItem=Workbench Template Mapping Item
 WB_FILE_FORMAT=File Format?
 WB_EDIT_PROPS=Edit Properties
 WB_EDIT_PROPS_MNEU=E
