--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -598,7 +598,7 @@ WB_REUSE_MAPPING_TT=Create new DataSet resuing a mapping from an existing DataSe
 WB_NEW_DATASET_TT=Create a new DataSet with a new mapping
 WB_EXPORT_DATA_TT=Export the DataSet to an MS-Excel file
 WB_EXPORT_TEMPLATE_TT=Create an empty MS-Excel file by exporting the DatSet's Columns definitions 
-WB_ADDITIONAL_FIELDS_REQD=Additional fields required
+WB_ADDITIONAL_FIELDS_REQD=Additional fields required in DataSet Mapping
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
