--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -490,6 +490,7 @@ Templates=Templates
 WB_DATASETS=DataSets
 WB_DATASET=DataSet
 WB_NEW_DATASET=New DataSet
+WB_NEW_DS_FROM_TMPL=Reuse DataSet Mappings
 WB_IMPORTDATA=Import Data
 Label_Entry=From Labels
 WB_REUSE_MAPPING=Reuse DataSet Mapping
@@ -566,7 +567,7 @@ WB_STOP_LOADING=Stop Loading Images
 WB_CONVERT_GEO_FORMAT=Convert Geo Ref Formats
 WB_PARSE_FILE_ERROR=The file `%s` could not be properly read in, it is most likely the wrong format.
 WB_IMAGE_WINDOW=Image Window
-WB_INITIAL_HTML=help/SpecifyHelp/OnRamp/Overview.html
+WB_INITIAL_HTML=help/SpecifyHelp/Workbench/Overview.html
 WB_EXPORT_NOFILENAME=No file name was entered.
 WB_NEWDATA_TOO_LONG=The data in the field '%s' exceeds %d characters.
 WB_TEXTFIELD=Text Field
