--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -838,7 +838,7 @@ DDDDDD=DD.DDDD (32.7619)
 DDMMMM=DD MM.MM (32 45.714)
 DDMMSS=DD MM SS.SS (32 45 42.84)
 GeoRefConv=Georeference Format Converter
-GeoRefConvDesc=Converts various georeference formats to one of a set of standardized formats
+GeoRefConvDesc=Choose an output format from the following list
 NoGeoRefColumns=DataSet does not contain georeference columns
 ID=ID
 Country=Country
