--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -64,6 +64,7 @@ export_hint=Export a Bundle to an external app or file
 Formats=Formats
 Applications=Apps
 ChooseFormat=Choose the export format
+VersionChecker=Version Checker
 
 Record_Set=Bundles
 
@@ -228,6 +229,8 @@ GeoTimePeriodMnemonic=G
 GeographyTree=Geography Tree
 GeographyMenu=Geography Tree
 GeographyMnemonic=Y
+
+CheckNow=Check For Updates
 
 #################################
 # Dialogs
@@ -863,3 +866,6 @@ BoundingBox=Bounding Box
 
 # misc
 of=of
+
+# URLS that might change over time
+VERSION_CHECK_URL=http://redbud.nhm.ku.edu/Specify/versionCheck/version_info.xml
