--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -490,10 +490,11 @@ newpicklist=New Pick List
 # Workbench
 #################################
 Templates=Templates
+WB_WELCOME=Welcome to the WorkBench
 WB_DATASETS=DataSets
 WB_DATASET=DataSet
 WB_NEW_DATASET=New DataSet
-WB_NEW_DS_FROM_TMPL=Reuse DataSet Mappings
+WB_NEW_DS_FROM_TMPL=New DataSet from Mappings
 WB_IMPORTDATA=Import Data
 Label_Entry=From Labels
 WB_REUSE_MAPPING=Reuse DataSet Mapping
@@ -507,7 +508,7 @@ WB_IMPORTED_COLUMNS=Unmapped Imported Columns
 WB_MAP_BTN=Map
 WB_UNMAP_BTN=Unmap
 WB_REMOVE_COLUMNS=Columns To Be Removed
-WB_SCHEMA=Schema
+WB_SCHEMA=Data Fields
 WB_DATASET_COLUMNS=DataSet Columns
 WB_DATAOBJECTS=Data Objects
 WB_DATAOBJ_FIELDS=Fields
