--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -157,6 +157,8 @@ ShowViewTT=Show View
 #TextFieldWithInfo
 ShowRecordInfoTT=Show detailed %s information
 
+NO_RESULTS=No Results Found
+
 CHOOSE_DEFAULT_OBJECT=Choose a Default %s
 
 #################################
@@ -594,6 +596,7 @@ WB_ROW=Row
 WB_COLUMN=Column
 WB_TRUNCATED=Excluded Data
 WB_TRUNCATIONS=The following values were truncated during import:
+WB_ALWAYS_ON_TOP=Keep window on top
 
 # ToolTips
 WB_CLICK_EDIT_DATA_TT=Click to edit the DataSet
@@ -803,6 +806,11 @@ REPLACEALL=Replace All
 MATCHCASE=Match Case
 WRAP=Wrap Search
 PHRASENOTFOUND=Phrase not found
+
+#################################
+# BioGeomancer stuff
+#################################
+NO_BG_RESULTS=BioGeomancer returned no results
 
 #################################
 # Csv import dialog
