--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -65,6 +65,7 @@ Formats=Formats
 Applications=Apps
 ChooseFormat=Choose the export format
 VersionChecker=Version Checker
+VER_CHK_TITLE=Checking for Updates
 
 Record_Set=Bundles
 
@@ -496,7 +497,7 @@ WB_WELCOME=Welcome to the WorkBench
 WB_DATASETS=DataSets
 WB_DATASET=DataSet
 WB_NEW_DATASET=New DataSet
-WB_NEW_DS_FROM_TMPL=New DataSet from Mappings
+WB_NEW_DS_FROM_TMPL=New DataSet Structure
 WB_IMPORTDATA=Import Data
 Label_Entry=From Labels
 WB_REUSE_MAPPING=Reuse DataSet Mapping
