New resource string

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -67,6 +67,7 @@ Applications=Apps
 ChooseFormat=Choose the export format
 VersionChecker=Version Checker
 VER_CHK_TITLE=Checking for Updates
+UpdateError=Error while checking for updates
 
 Record_Set=Bundles
 
@@ -879,4 +880,4 @@ BoundingBox=Bounding Box
 of=of
 
 # URLS that might change over time
-VERSION_CHECK_URL=http://redbud.nhm.ku.edu/Specify/versionCheck/version_info.xml
+VERSION_CHECK_URL=http://redbud.nhm.ku.edu:8080/VersionChecker/VersionCheck
