Removed use of Arrays.copyOf() since it is only in Java 6.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -881,3 +881,4 @@ of=of
 
 # URLS that might change over time
 VERSION_CHECK_URL=http://redbud.nhm.ku.edu:8080/VersionChecker/VersionCheck
+DOWNLOAD_SITE_URL=http://www.specifysoftware.org/Specify/download/
