--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -881,3 +881,4 @@ of=of
 
 # URLS that might change over time
 VERSION_CHECK_URL=http://redbud.nhm.ku.edu:8080/VersionChecker/VersionCheck
+DOWNLOAD_SITE_URL=http://www.specifysoftware.org/Specify/download/
