--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -534,11 +534,13 @@ WB_REMOVE_MAPPING_ITEM=Remove New Column
 WB_IMAGE=Image
 
 WB_CHOOSE_DATASET_REUSE= Choose a Data Set to reuse the mappings
-WB_CHOOSE_DATASET_REUSE_TITLE=Reuse Data Set Mapping
+WB_CHOOSE_DATASET_REUSE_TITLE=Choose Data Set Mapping
 
 WB_MAPPING_EDITOR=Data Set Mapping Editor
 WB_IMPORT_MAPPING_EDITOR=Import Data Set Mapper
 WB_NEW_DATASET_MAPPER=New Data Set Mapper
+WB_CREATE_NEW_MAPPING=Create new Data Set mapping
+WB_USE_EXISTING_MAPPING=Use an existing Data Set mapping
 
 WB_CARRYFORWARD=Carry Forward
 WB_CHOOSE_CARRYFORWARD=Choose Fields to Carry Forward:
